--- a/01.report.shell.commands.md
+++ b/01.report.shell.commands.md
@@ -1,22 +1,43 @@
-Example for formatting in MarkDown
---------------------------------------
+Basic commands:
 
-* Bullet 1 
-* Bullet 2
+echo hello world
+	-> "echo" command is used either to display values of a variable, call to a file directory or in this case: to print out a string or text which we or users make an input: hello world
 
-Something in *italic* (or *emphasized*), or something in **bold** like this.
+passwd
+	-> This is a sudo command in linux, often used to change the password for other users.
 
+date
+	-> This command is used to display current time and date
 
-```bash
-➜  operating_system git:(master) last | tail -n 10
-dx        console                   Sat Nov 30 14:38 - 11:37 (2+20:58)
-reboot    ~                         Sat Nov 30 14:38 
-shutdown  ~                         Sat Nov 30 14:38 
-dx        ttys000                   Sat Nov 30 14:36 - 14:36  (00:00)
-dx        console                   Sat Nov 30 14:33 - 14:38  (00:04)
-_mbsetupuser  console                   Sat Nov 30 14:31 - shutdown  (00:06)
-root      console                   Sat Nov 30 14:31 - 14:31  (00:00)
-reboot    ~                         Sat Nov 30 14:30 
+hostname
+	-> The command simply return the name of the host or network
 
-wtmp begins Sat Nov 30 14:30 
-```
+arch
+	-> This command will print out the computer architecture such as "x86_64" and such.
+
+uname -a
+	-> This command provides users the system information of which they are using, often used with a specific key to print specific information, in this case, "-a" means for the users to see everything.
+
+dmesg
+	-> This command prints the message buffer of the kernel and it often the messages produced by the device drivers.
+
+uptime
+	-> This command prints out how long have the system been running.
+
+who am i
+	-> This command shows the users which username they are using.
+
+who
+	-> This command shows the users which usernames are being logged in recently.
+
+id
+	-> This command prints out current user's user and group.
+
+last
+	-> This command display the information (top 10 lines) of the users who logged in and out of the system.
+
+finger
+	-> This command helps the user to look up and receive brief information of users and present various data like name, account, latest login and such.
+
+w
+	-> This command is used to check which users are logged in the system and the command they are executing at that time.
